updating package naming

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,5 +34,5 @@ jobs:
       package-manager: "poetry"
       dependency-path: "**/poetry.lock"
       trigger-label: "${{needs.evaluate-label.outputs.label}}"
-      project: tii-client
+      project: tii-quantum
       poetry-extras: --with docs
